<resources>
    <string name="app_name" translatable="false">Great Recipes</string>
    <string name="drawer_open" translatable="false">Drawer Open</string>
    <string name="drawer_close" translatable="false">Drawer Close</string>
    <string-array name="navigation_drawer_items_array">
        <item>Create</item>
        <item>Read</item>
        <item>Help</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="no_info">No info.</string>
    <string name="plan_a_meal">Plan a meal</string>
    <string name="search_recipe_online">Search recipes online</string>
    <string name="add_your_own_recipe">Add your own recipe</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="my_recipes_lists">My recipes lists</string>
    <string name="online">Online</string>
    <string name="my_own">My Own</string>
    <string name="favourites">Favourites</string>
    <string name="choose_serving_type">Choose serving type</string>
    <string name="appetizer">Appetizer</string>
    <string name="side_dish">Side Dish</string>
    <string name="main_dish">Main Dish</string>
    <string name="salad">Salad</string>
    <string name="pastry">Pastry</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="dessert">Dessert</string>
    <string name="does_recipe_exist">Does the recipe exist?</string>
    <string name="added_to_my_own">The recipe was added to \'My Own Recipes\' list</string>
    <string name="added_to_your_list">The recipe was added to your recipes lists</string>
    <string name="saved_successfully">The recipe was saved successfully</string>
    <string name="servings">Servings</string>
    <string name="enter_ingredient_detail">Enter the ingredient details</string>
    <string name="diet_prefs">Diet Prefs</string>
    <string name="vegan">Vegan</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="paleo">Paleo</string>
    <string name="allergens_prefs">Allergens Prefs</string>
    <string name="dairy_free">Dairy-free</string>
    <string name="egg_free">Egg-free</string>
    <string name="gluten_free">Gluten-free</string>
    <string name="peanut_free">Peanut-free</string>
    <string name="seafood_free">Seafood-free</string>
    <string name="sesame_free">Sesame-free</string>
    <string name="soy_free">Soy-free</string>
    <string name="treenut_free">Tree nut-free</string>
    <string name="wheat_free">Wheat-free</string>
    <string name="at_least_2_chars_required">At least 2 characters are required</string>
    <string name="searching">Searching…</string>
    <string name="please_wait">Please wait</string>
    <string name="internet_error">Internet error</string>
    <string name="no_results">No results</string>
    <string name="meal_planner">Meal Planner</string>
    <string name="calories">Calories</string>
    <string name="added_to_online_list">The recipe was added successfully to \'Online\' recipes list</string>
    <string name="select_browser">Select a browser…</string>
    <string name="cant_get_image">Can\'t get the recipe image</string>
    <string name="hours">Hours</string>
    <string name="hr.">hr.</string>
    <string name="min.">min.</string>
    <string name="minutes">Minutes</string>
    <string name="serving">Serving</string>
    <string name="filters">Filters</string>
    <string name="total">Total</string>
    <string name="yield">Yield</string>
    <string name="time">Time</string>
    <string name="ingredients">Ingredients</string>
    <string name="energy">Energy</string>
    <string name="instructions">Instructions</string>
    <string name="categories">Categories</string>
    <string name="notes">Notes</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="enter_the_instructions">Enter the instructions</string>
    <string name="setting_website">Setting website</string>
    <string name="clear_the_list">Clear the list</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="add_serving">Add Serving</string>
    <string name="ok">OK</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="remove_from_favourites">Remove From Favourites</string>
    <string name="choose_categories">Choose categories</string>
    <string name="enter_your_notes">Enter your notes</string>
    <string name="no_perform_online_search">No, perform an online search</string>
    <string name="yes_go_to_my_lists">Yes, go to my lists</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="click_here_to_add_recipe">Click here to add a new recipe</string>
    <string name="click_here_to_start_planning_meal">Click here to start planning your meal</string>
    <string name="enter_key_to_search">Enter a key to search</string>
    <string name="online_search">Online Search</string>
    <string name="enter_new_user_name">Enter new username</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="set_main_menu_display">Set main menu display</string>
    <string name="general_preferences">General Preferences</string>
    <string name="recipes_lists_preferences">Recipes Lists Preferences</string>
    <string name="the_operation_is_irreversible">The operation is irreversible</string>
    <string name="online_search_preferences">Online Search Preferences</string>
    <string name="delete_all_the_recipes_lists">Delete all the recipes lists</string>
    <string name="max_online_search_results">Max. online search results</string>
    <string name="filters_preferences">Filters Preferences</string>
    <string name="main_menu_display">Main menu display</string>
    <string name="change_user_name">Change user name</string>
    <string name="change_password">Change password</string>
    <string name="preferences">Preferences</string>
    <string name="colorful">Colorful</string>
    <string name="simple">Simple</string>
    <string name="main_dishes">Main Dishes</string>
    <string name="desserts">Desserts</string>
    <string name="side_dishes">Side Dishes</string>
    <string name="lunch_and_snacks">Lunch and Snacks</string>
    <string name="appetizers">Appetizers</string>
    <string name="salads">Salads</string>
    <string name="breads">Breads</string>
    <string name="breakfast_and_brunch">Breakfast and Brunch</string>
    <string name="soups">Soups</string>
    <string name="beverages">Beverages</string>
    <string name="condiments_and_sauces">Condiments and Sauces</string>
    <string name="cocktails">Cocktails</string>
    <string name="search_in_lists">Search In Recipes Lists</string>
    <string name="deleting_all_the_recipes">Deleting all the recipes</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="all_the_recipe_were_deleted">All the recipes were deleted</string>
    <string name="the_operation_was_aborted">The operation was aborted</string>
    <string name="no_image_available">No Image Available</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="edit_ingredient">Edit Ingredient</string>
    <string name="delete_ingredient">Delete Ingredient</string>
    <string name="set">Set</string>
    <string name="to_add_your_own_recipe_you_have_to_login">To add your own recipe you have to login.</string>
    <string name="the_username_used_as_author">The user name will be used as the recipe\'s author</string>
    <string name="not_now">Not now</string>
    <string name="from">From:</string>
    <string name="when_creating_own_recipe">when creating your own recipe</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="deleting">Deleting</string>
    <string name="recipes">recipes</string>
    <string name="a_recipe">a recipe</string>
    <string name="a_serving">a serving</string>
    <string name="the_recipe_was_deleted">The recipe was deleted</string>
    <string name="recipes_were_deleted">recipes were deleted</string>
    <string name="the_serving_was_deleted">The serving was deleted</string>
    <string name="servings_were_deleted">servings were deleted</string>
    <string name="recipe_details">Recipe Details</string>
    <string name="shared_recipe_details">Shared Recipe Details</string>
    <string name="recipes_lists">Recipes Lists</string>
    <string name="deleting_all_servings">Deleting all servings</string>
    <string name="at_least_1_character_is_required">At least 1 character is required</string>
    <string name="at_least_6_characters_are_required">At least 6 characters are required</string>
    <string name="max_20_chars_are_allowed">Max. 20 characters are allowed</string>
    <string name="set_max_online_search_results">Set max. online search results</string>
    <string name="exit_without_saving">Exit without saving</string>
    <string name="selected">Selected</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="to_add_recipe_to_favourites">To add a recipe to favourites:</string>
    <string name="click_recipe">1. Click on the recipe</string>
    <string name="click_button">2. Click the button</string>
    <string name="in_toolbar">in the toolbar</string>
    <string name="got_it">Got it</string>
    <string name="adding_recipe_to_favourites">Adding a recipe to favourites</string>
    <string name="upgrade">Upgrade</string>
    <string name="you_exceeded_the_downloaded_recipes_limit">You exceeded the downloaded recipes limit for trial version</string>
    <string name="you_exceeded_the_online_recipes_searches_limit">You exceeded the online recipes searches limit for trial version</string>
    <string name="go">Go</string>
    <string name="limitation_search_results">Max. 5 online search results will be presented</string>
    <string name="limitation_search_filters">When searching recipes online, only \"Paleo\", \"Sesame-Free\" and \"Soy-Free\" search-filters are enabled</string>
    <string name="limitation_downloaded_recipes">Max. 3 recipes can be downloaded to your list</string>
    <string name="limitation_online_searches">Max. 3 online recipe searches can be executed</string>
    <string name="limitation_categories">When creating your own recipes, the only available categories are \"Breads\" and \"Desserts\"</string>
    <string name="limitation_servings_types">In meal planner tool, the only available servings type are \"Appetizer\" and \"Side Dish\"</string>
    <string name="premium">Premium</string>
    <string name="get_premium_access">Upgrade To Premium Access</string>
    <string name="trial_version_limitation">Trial version limitations</string>
    <string name="upgrade_to_premium">Upgrade to a premium account</string>
    <string name="unlock_all_features">Unlock all features and limitations</string>
    <string name="error_purchasing_not_completed">Error: The purchasing was not completed</string>
    <string name="english_letters_only">English letters only</string>
    <string name="all_servings_will_be_deleted">All servings in the meal planner tool will be deleted as well</string>
    <string name="unexpected_error">Unexpected error, please try again</string>
    <string name="select_gallery">Select Gallery</string>
    <string name="the_image_not_supported">The image or the gallery is not supported, please pick a different image or gallery</string>
    <string name="vibration">Vibration</string>
    <string name="contact_us">Contact Us</string>
    <string name="send_us_mail">Send us mail</string>
    <string name="activate_vibration_with_warnings">Activate vibration with warnings</string>
    <string name="select_mail_app">Select E-Mail App</string>
    <string name="no_email_app">No E-Mail application found in your device</string>
</resources>