<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_preferences">

        <EditTextPreference
            android:icon="@mipmap/ic_prefs_username"
            android:dialogTitle="@string/enter_new_user_name"
            android:key="username"
            android:title="@string/change_user_name" />

        <EditTextPreference
            android:icon="@mipmap/ic_prefs_password"
            android:dialogTitle="@string/enter_new_password"
            android:key="password"
            android:title="@string/change_password" />

        <ListPreference
            android:icon="@mipmap/ic_prefs_main_menu"
            android:defaultValue="Colorful"
            android:dialogTitle="@string/set_main_menu_display"
            android:entries="@array/mainMenuDisplayEntries"
            android:entryValues="@array/mainMenuDisplayValues"
            android:key="mainMenuDisplay"
            android:title="@string/main_menu_display" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_prefs_vibration"
            android:defaultValue="true"
            android:key="vibration"
            android:summary="@string/activate_vibration_with_warnings"
            android:title="@string/vibration" />

        <Preference
            android:icon="@mipmap/ic_prefs_contact_us"
            android:key="contactUs"
            android:summary="@string/send_us_mail"
            android:title="@string/contact_us" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/recipes_lists_preferences">

        <Preference
            android:icon="@mipmap/ic_prefs_delete_recipes"
            android:key="deleteAll"
            android:summary="@string/the_operation_is_irreversible"
            android:title="@string/delete_all_the_recipes_lists" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/online_search_preferences">

        <ListPreference
            android:icon="@mipmap/ic_prefs_search_results"
            android:defaultValue="10"
            android:dialogTitle="@string/set_max_online_search_results"
            android:entries="@array/maxOnlineSearchResultsEntries"
            android:entryValues="@array/maxOnlineSearchResultsValues"
            android:key="maxOnlineSearchResults"
            android:title="@string/max_online_search_results" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/filters_preferences">

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_vegan"
            android:key="390^Vegan"
            android:title="@string/vegan" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_vegetarian"
            android:key="387^Lacto-ovo vegetarian"
            android:title="@string/vegetarian" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_paleo"
            android:key="403^Paleo"
            android:title="@string/paleo" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_dairy_free"
            android:key="396^Dairy-Free"
            android:title="@string/dairy_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_egg_free"
            android:key="397^Egg-Free"
            android:title="@string/egg_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_gluten_free"
            android:key="393^Gluten-Free"
            android:title="@string/gluten_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_peanut_free"
            android:key="394^Peanut-Free"
            android:title="@string/peanut_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_seafood_free"
            android:key="398^Seafood-Free"
            android:title="@string/seafood_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_sesame_free"
            android:key="399^Sesame-Free"
            android:title="@string/sesame_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_soy_free"
            android:key="400^Soy-Free"
            android:title="@string/soy_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_tree_nut_free"
            android:key="395^Tree Nut-Free"
            android:title="@string/treenut_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_wheat_free"
            android:key="392^Wheat-Free"
            android:title="@string/wheat_free" />

    </PreferenceCategory>

</PreferenceScreen>