<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/filters_preferences">

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_vegan"
            android:key="390^Vegan"
            android:title="@string/vegan" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_vegetarian"
            android:key="387^Lacto-ovo vegetarian"
            android:title="@string/vegetarian" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_paleo"
            android:key="403^Paleo"
            android:title="@string/paleo" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_dairy_free"
            android:key="396^Dairy-Free"
            android:title="@string/dairy_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_egg_free"
            android:key="397^Egg-Free"
            android:title="@string/egg_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_gluten_free"
            android:key="393^Gluten-Free"
            android:title="@string/gluten_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_peanut_free"
            android:key="394^Peanut-Free"
            android:title="@string/peanut_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_seafood_free"
            android:key="398^Seafood-Free"
            android:title="@string/seafood_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_sesame_free"
            android:key="399^Sesame-Free"
            android:title="@string/sesame_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_soy_free"
            android:key="400^Soy-Free"
            android:title="@string/soy_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_tree_nut_free"
            android:key="395^Tree Nut-Free"
            android:title="@string/treenut_free" />

        <CheckBoxPreference
            android:icon="@mipmap/ic_filter_wheat_free"
            android:key="392^Wheat-Free"
            android:title="@string/wheat_free" />

    </PreferenceCategory>

</PreferenceScreen>