<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/recipes_lists_preferences">

        <Preference
            android:icon="@mipmap/ic_prefs_delete_recipes"
            android:key="deleteAll"
            android:summary="@string/the_operation_is_irreversible"
            android:title="@string/delete_all_the_recipes_lists" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/online_search_preferences">

        <com.hanoch.greatrecipes.model.FreeTrialPreference
            android:icon="@mipmap/ic_prefs_search_results"
            android:summary="5"
            android:defaultValue="5"
            android:key="maxOnlineSearchResults"
            android:title="@string/max_online_search_results" />

    </PreferenceCategory>

</PreferenceScreen>