<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hanoch.greatrecipes.view.RecipesListsActivity"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_toolbar_action_save2"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_toolbar_action_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_toolbar_action_edit"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_toolbar_action_delete"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_addServing"
        android:icon="@drawable/ic_toolbar_action_add_serving"
        android:title="@string/add_serving"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ok"
        android:icon="@drawable/ic_toolbar_action_ok"
        android:title="@string/ok"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_addToFavourites"
        android:icon="@drawable/ic_toolbar_action_add_to_favourites"
        android:title="@string/add_to_favourites"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_removeFromFavourites"
        android:icon="@drawable/ic_toolbar_action_remove_from_favourites"
        android:title="@string/remove_from_favourites"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_closeWebview"
        android:icon="@drawable/ic_toolbar_action_close_webview"
        android:title="Close Webview"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_addToList"
        android:icon="@drawable/ic_toolbar_action_add_to_list"
        android:title="Add To List"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_toolbar_action_share2"
        android:title="Share Recipe"
        app:showAsAction="always" />

</menu>
