<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hanoch.greatrecipes.view.RecipeDetailsActivity">

    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_toolbar_action_save2"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_toolbar_action_edit"
        android:title="@string/edit"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_addServing"
        android:icon="@drawable/ic_toolbar_action_add_serving"
        android:title="@string/add_serving"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ok"
        android:icon="@drawable/ic_toolbar_action_ok"
        android:title="@string/ok"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_addToFavourites"
        android:icon="@drawable/ic_toolbar_action_add_to_favourites"
        android:title="@string/add_to_favourites"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_removeFromFavourites"
        android:icon="@drawable/ic_toolbar_action_remove_from_favourites"
        android:title="@string/remove_from_favourites"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_closeWebview"
        android:title="Close Webview"
        android:icon="@drawable/ic_toolbar_action_close_webview"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_addToList"
        android:title="Add To List"
        android:icon="@drawable/ic_toolbar_action_add_to_list"
        app:showAsAction="always" />

</menu>
